--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-scripts": "5.0.0"
   },
   "devDependencies": {
-    "@babel/runtime": "7.13.8"
+    "@babel/runtime": "7.13.8",
+    "gh-pages": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
