--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "address-book-react",
+  "homepage": "http://lucianosimoni.github.io/react-address-book",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
@@ -18,6 +19,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
