--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "firebase": "^9.15.0",
     "json-server": "^0.17.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0"
   },
