--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "address-book-react",
-  "homepage": "http://lucianosimoni.github.io/react-address-book/contacts",
+  "homepage": "https://lucianosimoni.github.io/react-address-book/contacts",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
