made the route / to contacts - homepage to default

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "address-book-react",
-  "homepage": "https://lucianosimoni.github.io/react-address-book/contacts/",
+  "homepage": "https://lucianosimoni.github.io/react-address-book/",
   "version": "1.0.0",
   "description": "Address Book using react and Firebase",
   "keywords": [],
